--- a/index.html
+++ b/index.html
@@ -122,4 +122,9 @@ function loadData(period) {
       });
 }
 
-// Car
+// Carica di default le ultime 24 ore
+loadData("24h");
+</script>
+
+</body>
+</html>
