--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
         padding: 20px;
     }
 
+    /* HEADER CON LOGO A SINISTRA */
+    #header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+
     #logo {
-        width: 180px;
-        margin-bottom: 10px;
+        width: 120px;
         filter: sepia(40%);
     }
 
     h1 {
         font-size: 36px;
-        margin-bottom: 10px;
+        margin: 0;
         color: #4a3b24;
         text-shadow: 1px 1px 2px #c8b89a;
     }
@@ -67,10 +75,11 @@
 
 <body>
 
-<!-- LOGO -->
-<img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Weather-station-icon.png/240px-Weather-station-icon.png">
-
-<h1>Stazione Meteo Giovanni</h1>
+<!-- HEADER CON LOGO A SINISTRA -->
+<div id="header">
+    <img id="logo" src="logo.png">
+    <h1>Stazione Meteo Giovanni</h1>
+</div>
 
 <!-- Indicatori -->
 <div class="indicator" id="tempBox">Temperatura: -- °C</div>
