--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Stazione Meteo Giovanni</title>
+
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
@@ -257,3 +260,4 @@ loadData("24h");
 
 </body>
 </html>
+
